# scipy-vscode-tutorial

./: pyproject.toml
src/tutorial/: hello.py
