[project]
name = "tutorial"
description = "SciPy 2023 VS Code tutorial"
version = "0.1.0"
[tool.poetry]
name = "scipy-vscode-tutorial"
version = "0.1.0"
description = ""
authors = ["B. J. Potter <bj.ctr.potter@faa.gov>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
ipykernel = "^6.24.0"
pytest = "^7.4.0"
matplotlib = "^3.7.2"
numpy = "^1.25.1"
emoji = "^2.6.0"
myst-nb = "^0.17.2"
jupyter-book = "^0.15.1"
pandas = "^2.0.3"
arrow = "^1.2.3"
regex = "^2023.6.3"
pyarrow = "^12.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
